test/tests/stages/18_structures/invalid_types/initializers/compound_initializer_too_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  struct
  identifier(pair)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(pair)
  identifier(p)
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  return
  const int(0)
  ;
  }
